Update logo to new quadratic version and fix header/content spacing

--- a/site/templates/styles/main.css
+++ b/site/templates/styles/main.css
@@ -27,13 +27,13 @@
 body { width: 100%; margin: 0; padding: 0; font-family: "GentiumPlusW"; font-size: 1.3rem; color: #333333; box-sizing: content-box; -webkit-box-sizing: content-box; -moz-box-sizing: content-box; }
 
 #header { width: 100%; margin-top: 0px; }
-#header_fixed { position: fixed; top: 0px; width: 100%; height: 140px; z-index: 100; background: rgba(255, 255, 255, 0.8); }
+#header_fixed { position: fixed; top: 0px; width: 100%; height: 170px; z-index: 100; background: rgba(255, 255, 255, 0.8); }
 #wrapper_header_fixed { position: relative; width: 90%; margin: 0 auto; }
 #header_left {  float: left; }
 #header_right {  float: right; margin-top: 4rem; }
 
-#logo { display: inline-block; margin-top: 35px; margin-left: -3px; }
-#logo img { height: 90px; width: auto; }
+#logo { display: inline-block; margin-top: 5px; margin-left: -3px; }
+#logo img { height: 160px; width: auto; }
 
 #navigation_top_right { display: inline-block; }
 #navigation_top_right div.wrap_the_lis { padding: 1.2rem 0 1rem 0; }
@@ -87,7 +87,7 @@ div.buchen:hover { background: #333333; color: white; }
 .volle_breite:has(.zweispaltig div.buchen.nav.zentriert) { margin-top: 0; }
 
 
-#content_wrapper { margin-top: 10rem; }
+#content_wrapper { margin-top: 11rem; }
 
 input:focus, select:focus, textarea:focus, button:focus, a:focus { outline: none; }
 
@@ -272,19 +272,22 @@ h4 { font-family: europa, sans-serif; font-size: 1.3rem; font-weight: 300; font-
   
  /* kleiner werdende Ausgabegeräte */
   @media screen and (max-width: 1490px) { 
-   #header_fixed { height: 120px; }
-   #logo { margin-top: 25px; }
-   #logo img {  height: 80px; }
+   #header_fixed { height: 115px; }
+   #logo { margin-top: 5px; }
+   #logo img {  height: 100px; }
    #header_right { margin-top: 3.2rem; }
    #navigation_top_right a { font-size: 0.95rem; } 
    #navigation_top_right li.level-1 { padding-right: 20px; }
    #buchen_top_right { margin-left: 20px; padding: 0.5rem 1rem 0.6rem 1rem; font-size: 0.85rem; }
-   #content_wrapper { margin-top: 8rem; }
+   #content_wrapper { margin-top: 7.5rem; }
    }
 
 
  @media screen and (max-width: 1280px) {
-  #logo { margin-top: 20px; }
+  #header_fixed { height: 115px; }
+  #logo { margin-top: 5px; }
+  #logo img { height: 100px; }
+  #content_wrapper { margin-top: 7.5rem; }
   #header_right {  float: right; margin-top: 2.5rem; width: 200px; }
   
   #navigation_top_right { display: none; }
@@ -359,8 +362,9 @@ h4 { font-family: europa, sans-serif; font-size: 1.3rem; font-weight: 300; font-
   
 @media screen and (max-width: 480px) {
   #header_fixed { height: 100px; }
-  #logo { margin-top: 30px; margin-left: -7px; width: auto; }
-  #logo img {  height: 50px; }  
+  #logo { margin-top: 5px; margin-left: -7px; width: auto; }
+  #logo img {  height: 90px; }
+  #content_wrapper { margin-top: 6.5rem; }
   #header_right {  width: 140px; }
   .hamburger { top: 2.2rem; right: 0; height: 38px; width: 30px; }
   .hamburger_x { top: 2.2rem; right: 0; height: 38px; width: 30px; }
